force-app/main/default/objects/Clients__c/Clients__c.object-meta.xml
<CustomObject>
    <label>ucl_Client</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ucl_Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>