force-app/main/default/objects/Clients__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>