force-app/main/default/objects/Clients__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <formula>ucl_LegalAdvisor__r.Account_Number__c  &amp;  Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client  ID</label>
    <type>Text</type>
</CustomField>