force-app/main/default/objects/Clients__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <label>Client Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>