force-app/main/default/objects/Clients__c/fields/ucl_LegalAdvisor__c.field-meta.xml
<CustomField>
    <fullName>ucl_LegalAdvisor__c</fullName>
    <label>ucl_LegalAdvisor</label>
    <referenceTo>ucl_LegalAdvisor__c</referenceTo>
    <relationshipLabel>ucl_Clients</relationshipLabel>
    <relationshipName>ucl_Clients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>